--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://cdn.bootcss.com/font-awesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
 	<!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link href="https://cdn.bootcss.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 	<link href="images/icon.ico" rel="shortcut icon" />
 	<!--[if lt IE 9]>
 		<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>		
@@ -25,6 +26,7 @@
 
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
 	<!-- <script src="js/device.js"></script> -->
 
 
@@ -64,7 +66,9 @@
 	</ul>
 	</li>
 	<li><a href="http://charmlegal.com" target="_blank">检索攻略</a></li>
-	<li><a href="#">工具箱</a></li>
+	<li><a href="https://github.com/lawtribes/toolbox" target="_blank">工具箱</a></li>
+	<li><a class="btn" href="https://github.com/lawtribes" target="_blank"><i class="icon-github icon-large"></i>Follow us</a></li>
+	
 
 </ul>
 
@@ -233,7 +237,7 @@
 
 	<div>
 		<h4 id="part7"><b>7. 港澳台及外国地区企业信息查询</b></h4>
-		<p class="text-danger">注：部分网站需要借助VPN方可登陆，VPN<a href="https://github.com/chefuyin/legal_tools/tree/master/%E6%A2%AF%E5%AD%90" target="_blank">下载地址</a></p>
+		<p class="text-danger">注：部分网站需要借助VPN方可登陆，VPN<a href="https://github.com/lawtribes/toolbox" target="_blank">下载地址</a></p>
 		<div class="panel panel-default">
 			<div class="panel-heading"><span class="label label-danger">官网</span></div>	
 			<div class="panel-body">
@@ -300,7 +304,7 @@
 					<div class="panel-body">
 					<div class="row">
 						<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"><a class="btn btn-link" role="button" href="http://www.legalminer.com/" target="_blank">理脉</a></div>
-					
+						
 					</div>
 					</div>
 			</div>
@@ -334,9 +338,11 @@
 <div id="footer">
 <p></p>
 
-<h5 style="text-align:center"><strong>&copy;2017 律商部落LawTribes.com</strong></h5>
+<h5 style="text-align:center"><strong>&copy;2017 律商部落LawTribes.com</strong>
+	
+</h5>
 
-<address style="text-align:center"><strong>Email：</strong> <a href="mailto:admin@lawtribes.com">admin@lawtribes.com</a></address>
+<address style="text-align:center"><strong>Email：</strong> <a href="mailto:chefuyin@foxmail.com">admin@lawtribes.com</a></address>
 
 <p></p>
 </div>
