--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 	
 </h5>
 
-<address style="text-align:center"><strong>Email：</strong> <a href="mailto:chefuyin@foxmail.com">admin@lawtribes.com</a></address>
+<address style="text-align:center"><strong>Email：</strong> <a href="mailto:chefuyin@foxmail.com">chefuyin@foxmail.com</a></address>
 
 <p></p>
 </div>
