--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <div id="footer">
 <p></p>
 
-<h5 style="text-align:center"><strong>&copy;2017 律商部落LawTribes.com</strong>
+<h5 style="text-align:center"><strong>&copy;2017-2018 律商部落LawTribes.com</strong>
 	
 </h5>
 
