--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
 			document.write('<script src="' + src + '" id="sozz"><\/script>');
 		})();
 	</script>
+	<script type="text/javascript" src="http://ip.chinaz.com/getip.aspx"></script>
 
 </body>
 
