--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 			<strong>Email：</strong>
 			<a href="mailto:chefuyin@foxmail.com">chefuyin@foxmail.com</a>
 		</address>
-
+		<div><script type="text/javascript" src="http://ip.chinaz.com/getip.aspx"></script></div>
 		<p></p>
 	</div>
 
@@ -627,7 +627,7 @@
 			document.write('<script src="' + src + '" id="sozz"><\/script>');
 		})();
 	</script>
-	<script type="text/javascript" src="http://ip.chinaz.com/getip.aspx"></script>
+	
 
 </body>
 
