--- a/index.html
+++ b/index.html
@@ -299,15 +299,92 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://wsjs.saic.gov.cn" target="_blank">工商总局商标局（新站）</a>
+								<a class="btn btn-link" role="button" href="http://wsjs.saic.gov.cn" target="_blank">中国工商总局商标局（新站）</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://cpquery.sipo.gov.cn/" target="_blank">中国及多国专利信息查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.ccopyright.com.cn/index.php?com=com_noticeQuery&amp;method=softwareList&amp;optionid=1221"
-								 target="_blank">作品及计算机作品著作权</a>
+								 target="_blank">中国作品及计算机作品著作权</a>
 							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://ipsearch.ipd.gov.hk/index.html"
+								 target="_blank">香港知识产权署（商标、专利、外观设计）</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.economia.gov.mo/zh_TW/web/public/pg_es_ae_qe?_refresh=true"
+								 target="_blank">澳门经济局（商标、专利等）</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://twtmsearch.tipo.gov.tw/OS0/OS0101.jsp"
+								 target="_blank">台湾经济部智慧财产局（商标）</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.tipo.gov.tw/lp.asp?CtNode=7454&CtUnit=3606&BaseDSD=7&mp=1"
+								 target="_blank">台湾经济部智慧财产局（专利等）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.wipo.int/branddb/en/#"
+								 target="_blank">WIPO马德里体系（商标）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://patentscope.wipo.int/search/en/structuredSearch.jsf"
+								 target="_blank">WIPO国际专利体系（专利）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.wipo.int/designdb/hague/en/"
+								 target="_blank">WIPO海牙体系（外观设计）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://tmsearch.uspto.gov/bin/gate.exe?f=login&p_lang=english&p_d=trmk"
+								 target="_blank">美国商标数据库</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.uspto.gov/patents-application-process/search-patents"
+								 target="_blank">美国专利数据库</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.gov.uk/government/organisations/intellectual-property-office"
+								 target="_blank">英国知产局（商标、专利、版权等）</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.ic.gc.ca/app/opic-cipo/trdmrks/srch/home?lang=eng"
+								 target="_blank">加拿大商标数据库</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://register.dpma.de/DPMAregister/uebersicht"
+								 target="_blank">德国DPMA（专利、商标、设计等）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.j-platpat.inpit.go.jp/web/all/top/BTmTopEnglishPage"
+								 target="_blank">日本工业所有权情报·研修馆</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://engportal.kipris.or.kr/engportal/search/total_search.do"
+								 target="_blank">韩国知产局（专利、商标、设计）</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<span class="label label-primary">第三方</span>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.tmdn.org/tmview/welcome#" target="_blank">TMview多国商标查询</a>
+							</div>
+							
+
 
 						</div>
 					</div>
