--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 				<ul class="nav navbar-nav">
-					<li>
+					<!-- <li>
 						<a href="http://lawtribes.com" target="_blank">
 							<b>搜法规（筹备中）</b>
 						</a>
-					</li>
-					<li>
+					</li> -->
+					<!-- <li>
 						<a href="http://charmlegal.com" target="_blank">检索攻略</a>
-					</li>
+					</li> -->
 					<li>
 						<a href="https://github.com/lawtribes/toolbox" target="_blank">工具箱</a>
 					</li>
@@ -109,7 +109,10 @@
 								<a class="btn btn-link" role="button" href="http://www.gsxt.gov.cn/index.html" target="_blank">全国企业信用信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.gjsy.gov.cn/cxzl/" target="_blank">事业单位在线（分站在左侧）</a>
+								<a class="btn btn-link" role="button" href="http://www.gjsy.gov.cn/cxzl/" target="_blank">事业单位在线</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.creditchina.gov.cn/" target="_blank">信用中国</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://qyxy.baic.gov.cn/" target="_blank">北京市企业信用信息网</a>
@@ -121,7 +124,7 @@
 								<a class="btn btn-link" role="button" href="http://cri.gz.gov.cn/Search/Result?keywords" target="_blank">广州商事主体信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="https://app02.szmqs.gov.cn/outer/entSelect/gs.html" target="_blank">深圳市场质量监督管理委员会</a>
+								<a class="btn btn-link" role="button" href="https://amr.sz.gov.cn/xyjggs.webui/xyjggs/index.aspx" target="_blank">深圳商事主体信用监管公示平台</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.nacao.org.cn/" target="_blank">全国组织机构代码中心</a>
@@ -145,7 +148,7 @@
 						<div class="row">
 
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.tianyancha.com/" target="_blank"> 天眼查（免登陆）</a>
+								<a class="btn btn-link" role="button" href="http://www.tianyancha.com/" target="_blank"> 天眼查</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.qichacha.com/" target="_blank">企查查</a>
@@ -173,17 +176,34 @@
 								<a class="btn btn-link" role="button" href="http://wenshu.court.gov.cn/" target="_blank">中国裁判文书网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://shixin.court.gov.cn/" target="_blank">最高院失信被执行人名单</a>
+								<a class="btn btn-link" role="button" href="http://zxgk.court.gov.cn/" target="_blank">中国执行信息公开网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://zhixing.court.gov.cn/search/" target="_blank">最高院被执行人信息查询</a>
+								<a class="btn btn-link" role="button" href="http://www.bjcourt.gov.cn/cpws/index.htm" target="_blank">北京法院审判信息网</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://bjgy.chinacourt.gov.cn/paper.shtml" target="_blank">北京法院网（2013年以前文书）</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.hshfy.sh.cn/shfy/gweb2017/index_flws.html" target="_blank">上海高院-裁判文书</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.judiciary.hk/chs/legal_ref/judgments.htm" target="_blank">香港司法机构-判案书查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://jirs.judicial.gov.tw/FJUD/" target="_blank">台湾司法院-裁判书查询</a>
+								<a class="btn btn-link" role="button" href="http://www.court.gov.mo/zh/subpage/researchjudgments" target="_blank">澳门特区法院-裁判书搜寻</a>
 							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://law.judicial.gov.tw/" target="_blank">台湾司法院-法学资料检索系统</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.courts.go.jp/app/hanrei_jp/search1" target="_blank">日本裁判所-判决书查询</a>
+							</div>
+
+							
+
+							
 						</div>
 					</div>
 				</div>
@@ -195,19 +215,16 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://bmla.chinalawinfo.com/" target="_blank">北大法宝</a>
+								<a class="btn btn-link" role="button" href="https://www.pkulaw.com/case" target="_blank">北大法宝</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.itslaw.com/" target="_blank">无讼案例</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.lawsdata.com/" target="_blank">把手案例</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://openlaw.cn/" target="_blank">OpenLaw</a>
-							</div>
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.itslaw.com/" target="_blank">无讼案例</a>
-							</div>
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://caseshare.cn/" target="_blank">Case Share</a>
 							</div>
 						</div>
 					</div>
@@ -230,10 +247,10 @@
 								<a class="btn btn-link" role="button" href="http://law.npc.gov.cn/FLFG/index.jsp" target="_blank">中国法律法规信息库</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.npc.gov.cn/npc/dbdhhy/12_5/node_31984.htm" target="_blank">全国人大-权威发布</a>
+								<a class="btn btn-link" role="button" href="http://www.npc.gov.cn/npc/c12435/dlm_list.shtml" target="_blank">全国人大-权威发布</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.npc.gov.cn/npc/flsyywd/node_1793.htm" target="_blank">全国人大-法律释义</a>
+								<a class="btn btn-link" role="button" href="http://www.npc.gov.cn/npc/c1793/flsyywd.shtml" target="_blank">全国人大-法律释义</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://search.chinalaw.gov.cn/search2.html" target="_blank">中国政府法制信息网数据</a>
@@ -248,10 +265,13 @@
 								<a class="btn btn-link" role="button" href="http://www.chinatax.gov.cn/n810341/n810755/index.html" target="_blank">国税总局-税收政策</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="https://www.elegislation.gov.hk/?_lang=zh-Hant-HK" target="_blank">香港-律政司</a>
+								<a class="btn btn-link" role="button" href="https://www.elegislation.gov.hk/" target="_blank">香港-电子版法例</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.judicial.gov.tw/lab3.asp" target="_blank">台湾-司法院（法规资料查询）</a>
+								<a class="btn btn-link" role="button" href="http://legismac.safp.gov.mo/legismac/main/main.jsf?lang=zh_TW" target="_blank">澳门-法例资料查询系统</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://law.moj.gov.tw/index.aspx" target="_blank">台湾-法规资料库</a>
 							</div>
 						</div>
 					</div>
@@ -262,10 +282,7 @@
 						<span class="label label-primary">第三方</span>
 					</div>
 					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://law.cnki.net/bjlsxh/" target="_blank">数字图书馆</a>
-							</div>
+						<div class="row">							
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.law-lib.com/law/" target="_blank">法律图书馆</a>
 							</div>
@@ -274,6 +291,9 @@
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://open.pkulaw.cn/" target="_blank">中国法律开放平台</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://law.cnki.net/bjlsxh/" target="_blank">数字图书馆</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.wkinfo.com.cn/" target="_blank">威科先行</a>
@@ -299,7 +319,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://wsjs.saic.gov.cn" target="_blank">中国工商总局商标局（新站）</a>
+								<a class="btn btn-link" role="button" href="http://wsjs.saic.gov.cn" target="_blank">中国工商总局商标局</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://cpquery.sipo.gov.cn/" target="_blank">中国及多国专利信息查询</a>
@@ -403,18 +423,12 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://app2.sfda.gov.cn/datasearchp/gzcxSearch.do?formRender=cx" target="_blank">国家食药监总局-公众查询</a>
-							</div>
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://qy1.sfda.gov.cn/datasearch/face3/dir.html" target="_blank">国家食药监总局-企业查询</a>
-							</div>
+								<a class="btn btn-link" role="button" href="http://www.samr.gov.cn/fw/wyc/" target="_blank">国家市场监督管理总局-我要查</a>
+							</div>							
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://app1.sfda.gov.cn/datasearch/face3/base.jsp?tableId=39&amp;tableName=TABLE39&amp;title=%D2%A9%C6%B7%B9%E3%B8%E6&amp;bcId=118715914557941726114819742460"
-								 target="_blank">食品、药品等广告批文</a>
-							</div>
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.sda.gov.cn/WS01/CL1883/" target="_blank">国家食药监总局-标准查询</a>
-							</div>
+								 target="_blank">食品、药品广告批文查询</a>
+							</div>							
 						</div>
 					</div>
 				</div>
@@ -432,13 +446,13 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.cninfo.com.cn/cninfo-new/index" target="_blank">巨潮资讯（沪深两市）</a>
+								<a class="btn btn-link" role="button" href="http://www.cninfo.com.cn/new/index" target="_blank">巨潮资讯（沪深两市）</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.sse.com.cn/disclosure/overview/" target="_blank">上海证券交易所</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.szse.cn/" target="_blank">深圳证券交易所</a>
+								<a class="btn btn-link" role="button" href="http://www.szse.cn/disclosure/index.html" target="_blank">深圳证券交易所</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.neeq.com.cn/disclosure/announcement.html" target="_blank">全国中小企业股份股份转让系统（新三板）</a>
@@ -477,12 +491,13 @@
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://www.icris.cr.gov.hk/csci/" target="_blank">香港公司注册处-网上查册中心</a>
-							</div>
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://gcis.nat.gov.tw/pub/cmpy/cmpyInfoListAction.do" target="_blank">台湾公司及分公司基本资料</a>
-							</div>
+							</div>							
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do" target="_blank">台湾商工登记公示资料</a>
+							</div>
+
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.houjin-bangou.nta.go.jp/" target="_blank">日本国税厅法人编号查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://businesssearch.sos.ca.gov/" target="_blank">美国德州秘书处</a>
@@ -498,7 +513,7 @@
 								<a class="btn btn-link" role="button" href="https://www.uid.admin.ch/search.aspx?lang=en" target="_blank">瑞士公司查询-FSO</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.ssm.com.my/ssm2/reg_search" target="_blank">马来西亚公司委员会-SSM</a>
+								<a class="btn btn-link" role="button" href="http://www.ssm.com.my/Pages/Quick_Link/e-Search.aspx" target="_blank">马来西亚公司委员会-SSM</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.ved.gov.ru/eng/companies/business/" target="_blank">俄罗斯公司查询（导航站）</a>
@@ -521,14 +536,14 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="https://tsm.miit.gov.cn/pages/home.aspx" target="_blank">电信业务经营许可证查询</a>
+								<a class="btn btn-link" role="button" href="https://zwfw.miit.gov.cn/miit/resultSearch?categoryTreeId=308" target="_blank">电信业务经营许可证查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.miitbeian.gov.cn/publish/query/indexFirst.action" target="_blank">工信部-域名信息备案系统</a>
+								<a class="btn btn-link" role="button" href="http://www.beian.miit.gov.cn/publish/query/indexFirst.action" target="_blank">工信部-域名信息备案系统</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://shenpi.miit.gov.cn/resultSearch?wd=&amp;categoryTreeId=221&amp;categoryTreePid=&amp;pagenow=1"
-								 target="_blank">外商投资经营电信业务许可公开</a>
+								<a class="btn btn-link" role="button" href="https://zwfw.miit.gov.cn/miit/resultSearch?categoryTreeId=221"
+								 target="_blank">外商投资经营电信业务查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://whois.icann.org/zh" target="_blank">ICANN WHOIS</a>
@@ -581,25 +596,25 @@
 								 target="_blank">上海律师查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://12348.gdsf.gov.cn/front/servItemDataqueryAction.ered?reqCode=dataTypeInit&itemid=2015082714175924211&querymethod=10&itemNo=LS0003"
+								<a class="btn btn-link" role="button" href="https://gd.12348.gov.cn/jsp/web/legalserviceres/legalserviceorg.jsp?flag=gzs"
 								 target="_blank">广东律师查询</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="panel panel-default">
+				<!-- <div class="panel panel-default">
 					<div class="panel-heading">
 						<span class="label label-primary">第三方</span>
 					</div>
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.legalminer.com/" target="_blank">理脉</a>
+								<a class="btn btn-link" role="button" href="http://www. .com/" target="_blank"> </a>
 							</div>
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 
 			<div>
