--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	/>
 	<meta name="description" content="律商部落-致力普及法律知识，提供法律检索站点导航，帮助快速高效完成法律检索" />
 	<meta name="author" content="律商部落LawTribes.com" />
-	<meta name="baidu-site-verification" content="Skz5f38q7D" />
-	<meta name="sogou_site_verification" content="7Y28nkxCdq" />
-	<meta name="360-site-verification" content="f523b86c171dab68e28ca30546e321fa" />
+<!-- 	<meta name="baidu-site-verification" content="Skz5f38q7D" /> -->
+<!-- 	<meta name="sogou_site_verification" content="7Y28nkxCdq" /> -->
+<!-- 	<meta name="360-site-verification" content="f523b86c171dab68e28ca30546e321fa" /> -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="renderer" content="webkit">
