--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://e-justice.europa.eu/content_case_law-11-en.do" target="_blank">欧盟判例法</a>
 							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="http://www.japaneselawtranslation.go.jp/" target="_blank">日本法务省-法律翻译数据库</a>
+							</div>
 
 						</div>
 					</div>
@@ -346,7 +349,7 @@
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://ipsearch.ipd.gov.hk/index.html"
-								 target="_blank">香港知识产权署（商标、专利、外观设计）</a>
+								 target="_blank">香港知识产权署</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://www.economia.gov.mo/zh_TW/web/public/pg_es_ae_qe?_refresh=true"
