--- a/index.html
+++ b/index.html
@@ -115,25 +115,25 @@
 								<a class="btn btn-link" role="button" href="https://www.creditchina.gov.cn/" target="_blank">信用中国</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://qyxy.baic.gov.cn/" target="_blank">北京市企业信用信息网</a>
+								<a class="btn btn-link" role="button" href="http://qyxy.scjgj.beijing.gov.cn/" target="_blank">北京市企业信用信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://gsxt.gzaic.gov.cn/aiccips/GZpublicity/toSearch" target="_blank">广州红盾信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://cri.gz.gov.cn/Search/Result?keywords" target="_blank">广州商事主体信息网</a>
+								<a class="btn btn-link" role="button" href="http://cri.gz.gov.cn/sofpro/gzyyqt/bmcx/business/mainBusiness.jsp?page=1" target="_blank">广州商事主体信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://amr.sz.gov.cn/xyjggs.webui/xyjggs/index.aspx" target="_blank">深圳商事主体信用监管公示平台</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.nacao.org.cn/" target="_blank">全国组织机构代码中心</a>
+								<a class="btn btn-link" role="button" href="https://www.cods.org.cn/" target="_blank">全国组织机构代码中心</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.chinanpo.gov.cn/search/orgindex.html" target="_blank">全国性社会组织查询(NPO)</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://cx.chinanpo.gov.cn/" target="_blank">地方社会组织查询(NPO)</a>
+								<a class="btn btn-link" role="button" href="http://cishan.chinanpo.gov.cn/biz/ma/csmh/a/csmhaindex.html/" target="_blank">慈善组织查询</a>
 							</div>
 						</div>
 					</div>
@@ -252,9 +252,9 @@
 					</div>
 					<div class="panel-body">
 						<div class="row">
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://law.npc.gov.cn/FLFG/index.jsp" target="_blank">中国法律法规信息库</a>
-							</div>
+							<!-- <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12"> -->
+								<!-- <a class="btn btn-link" role="button" href="http://law.npc.gov.cn/FLFG/index.jsp" target="_blank">中国法律法规信息库</a> -->
+							<!-- </div> -->
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.npc.gov.cn/npc/c12435/dlm_list.shtml" target="_blank">全国人大-权威发布</a>
 							</div>
@@ -315,7 +315,7 @@
 								<a class="btn btn-link" role="button" href="http://open.pkulaw.cn/" target="_blank">中国法律开放平台</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://law.cnki.net/bjlsxh/" target="_blank">数字图书馆</a>
+								<a class="btn btn-link" role="button" href="https://lawnew.cnki.net/kns/brief/result.aspx?dbPrefix=CLKD" target="_blank">知网数字图书馆</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://www.wkinfo.com.cn/" target="_blank">威科先行</a>
@@ -341,7 +341,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://wsjs.saic.gov.cn" target="_blank">中国工商总局商标局</a>
+								<a class="btn btn-link" role="button" href="http://wcjs.sbj.cnipa.gov.cn/txnT01.do" target="_blank">中国工商总局商标局</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="http://cpquery.sipo.gov.cn/" target="_blank">中国及多国专利信息查询</a>
@@ -448,8 +448,8 @@
 								<a class="btn btn-link" role="button" href="http://www.samr.gov.cn/fw/wyc/" target="_blank">国家市场监督管理总局-我要查</a>
 							</div>							
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://app1.sfda.gov.cn/datasearch/face3/base.jsp?tableId=39&amp;tableName=TABLE39&amp;title=%D2%A9%C6%B7%B9%E3%B8%E6&amp;bcId=118715914557941726114819742460"
-								 target="_blank">食品、药品广告批文查询</a>
+								<a class="btn btn-link" role="button" href="http://adsc.samr.gov.cn/spyxggsc/MDAIS"
+								 target="_blank">食、药等广告批文查询</a>
 							</div>							
 						</div>
 					</div>
@@ -581,7 +581,7 @@
 								<a class="btn btn-link" role="button" href="https://zwfw.miit.gov.cn/miit/resultSearch?categoryTreeId=308" target="_blank">电信业务经营许可证查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.beian.miit.gov.cn/publish/query/indexFirst.action" target="_blank">工信部-域名信息备案系统</a>
+								<a class="btn btn-link" role="button" href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank">工信部-域名信息备案系统</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://zwfw.miit.gov.cn/miit/resultSearch?categoryTreeId=221"
