--- a/index.html
+++ b/index.html
@@ -538,6 +538,10 @@
 								 target="_blank">加拿大联邦公司查询（仅联邦）</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button" href="https://www.bizfile.gov.sg/"
+								 target="_blank">新加坡ACRA</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://www.uid.admin.ch/search.aspx?lang=en" target="_blank">瑞士公司查询-FSO</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
