--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
 				<h4 id="part7">
 					<b>7. 港澳台及外国地区企业信息查询</b>
 				</h4>
-				<p class="text-danger">注：部分网站需要借助VPN方可登陆，VPN
-					<a href="https://github.com/lawtribes/toolbox" target="_blank">下载地址</a>
+				<p class="text-danger">注：部分网站需要借助VPN方可登陆，VPN邀请码：J4HSO-N46OT-PGE5D-HM7N4
+					<a href="https://github.com/glados-network/GLaDOS" target="_blank">链接</a>
 				</p>
 				<div class="panel panel-default">
 					<div class="panel-heading">
@@ -892,7 +892,7 @@
 		<p></p>
 
 		<h5 style="text-align:center">
-			<strong>&copy;2017-2021 律商部落LawTribes.com</strong>
+			<strong>&copy;2017-2022 律商部落LawTribes.com</strong>
 
 		</h5>
 
