--- a/index.html
+++ b/index.html
@@ -678,6 +678,13 @@
 									target="_blank">欧盟（商业、土地、破产）登记机构</a>
 							</div>
 
+							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+								<a class="btn btn-link" role="button"
+									href="https://www.bvifsc.vg/certificate-validation" target="_blank">BVI-FSC
+									Certificate Verification</a>
+							</div>
+
+
 
 
 						</div>
