--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 									target="_blank">全国企业信用信息网</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www.gjsy.gov.cn/cxzl/"
-									target="_blank">事业单位在线</a>
+								<a class="btn btn-link" role="button" href="http://www.gjsy.gov.cn/sydwfrxxcx/"
+									target="_blank">事业单位法人登记信息查询</a>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 								<a class="btn btn-link" role="button" href="https://www.creditchina.gov.cn/"
