--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="keywords"
-		content="律商部落，lawtribes,法律检索，检索企业信息，检索裁判案例，检索被执行信息，检索商标、版权登记，查询食品、药品、保健品广告，查询国内上市公司，查询香港上市公司，查询美国上市公司，查询港台公司登记信息，查询国外公司登记信息，查询ICP证，查询律师" />
-	<meta name="description" content="律商部落-致力普及法律知识，提供法律检索站点导航，帮助快速高效完成法律检索" />
-	<meta name="author" content="律商部落LawTribes.com" />
-	<!-- 	<meta name="baidu-site-verification" content="Skz5f38q7D" /> -->
-	<!-- 	<meta name="sogou_site_verification" content="7Y28nkxCdq" /> -->
-	<!-- 	<meta name="360-site-verification" content="f523b86c171dab68e28ca30546e321fa" /> -->
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
+		content="律商部落,lawtribes,法律检索,检索企业信息,检索裁判案例,检索被执行信息，检索商标、版权登记,查询食品、药品、保健品广告,查询国内上市公司,查询香港上市公司,查询美国上市公司,查询港台公司登记信息,查询国外公司登记信息,查询ICP证,查询律师">
+	<meta name="description" content="律商部落-致力普及法律知识,提供法律检索站点导航,帮助快速高效完成法律检索">
+	<meta name="author" content="律商部落LawTribes.com" >
+	
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" >
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="renderer" content="webkit">
 	<title>律商部落LawTribes</title>
@@ -21,29 +19,19 @@
 	<link href="https://cdn.bootcss.com/font-awesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
 	<!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
 	<link href="https://cdn.bootcss.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-	<link href="images/icon.ico" rel="shortcut icon" />
+	<link href="images/icon.ico" rel="shortcut icon">
 	<!--[if lt IE 9]>
 		<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.js"></script>		
 		<script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<![endif]-->
-
+	
+	<link rel="stylesheet" href="./css/style.css">
+	
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
 	</script>
 
-	<!-- <script src="js/device.js"></script> -->
-
-
-	<style type="text/css">
-		.navbar-brand {
-			float: left;
-			height: 30px;
-			padding: 5px 0px;
-			font-size: 18px;
-			line-height: 15px;
-		}
-	</style>
 </head>
 
 <body>
@@ -61,14 +49,7 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 				<ul class="nav navbar-nav">
-					<!-- <li>
-						<a href="http://lawtribes.com" target="_blank">
-							<b>搜法规（筹备中）</b>
-						</a>
-					</li> -->
-					<!-- <li>
-						<a href="http://charmlegal.com" target="_blank">检索攻略</a>
-					</li> -->
+					
 					<li>
 						<a href="https://github.com/lawtribes/toolbox" target="_blank">工具箱</a>
 					</li>
@@ -604,9 +585,6 @@
 				<h4 id="part7">
 					<b>7. 港澳台及外国地区企业信息查询</b>
 				</h4>
-				<p class="text-danger">注：部分网站需要借助VPN方可登陆，VPN邀请码：J4HSO-N46OT-PGE5D-HM7N4
-					<a href="https://github.com/glados-network/GLaDOS" target="_blank">链接</a>
-				</p>
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<span class="label label-danger">官网</span>
@@ -805,19 +783,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="panel panel-default">
-					<div class="panel-heading">
-						<span class="label label-primary">第三方</span>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-								<a class="btn btn-link" role="button" href="http://www. .com/" target="_blank"> </a>
-							</div>
-
-						</div>
-					</div>
-				</div> -->
+				
 			</div>
 
 			<div>
@@ -900,32 +866,15 @@
 
 	<hr />
 	<div id="footer">
-		<p></p>
+		
 
 		<h5 style="text-align:center">
-			<strong>&copy;2017-2022 律商部落LawTribes.com</strong>
+			<strong>&copy;2017-2023 律商部落LawTribes.com</strong>
 
 		</h5>
 
-		<p></p>
+		
 	</div>
-
-	<!-- <script>
- var isMobile = device.mobile(),
-            isTable = device.tablet();
-
-    if(isMobile || isTable){
-        window.open("m/default.html","_self");
-    }
-</script> -->
-	<script>
-		(function () {
-			var src = (document.location.protocol == "http:") ?
-				"http://js.passport.qihucdn.com/11.0.1.js?a1a24e5eb616d51bb22627cdd0c10081" :
-				"https://jspassport.ssl.qhimg.com/11.0.1.js?a1a24e5eb616d51bb22627cdd0c10081";
-			document.write('<script src="' + src + '" id="sozz"><\/script>');
-		})();
-	</script>
 
 
 </body>
